--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.21.3",
@@ -46,6 +46,7 @@
     "notistack": "^3.0.2",
     "oidc-client": "^1.11.5",
     "postcss": "^8.5.3",
+    "postcss-nesting": "^13.0.1",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.4.0",
     "react-multi-date-picker": "^4.5.2",
@@ -53,8 +54,8 @@
     "redux": "^5.0.1",
     "redux-oidc": "^4.0.0-beta1",
     "redux-thunk": "^3.1.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.7",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
